--- a/_mockUp/src/styl/ITCSS/components/_components.header.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.header.styl
@@ -21,7 +21,7 @@
     z-index 1
     transition( all, 0.25s )
 
-    +media-query( screen, max-width 820px )
+    +media-query( screen, max-width 960px )
         position static
         rem-fallback( margin-top, -388px )
 .header__nav--conn
@@ -49,51 +49,47 @@
     rem-fallback( padding, 16px 0 )
     rem-fallback( margin, 0 8px )
 
-    +media-query( screen, max-width 820px )
+    +media-query( screen, max-width 960px )
         display block
         rem-fallback( font-size, 22px )
         rem-fallback( padding, 6px 0 )
         margin 0
-.nav__element--accueil
-    display none
-    +media-query( screen, max-width 820px )
-        display block
 
 .element__link
     color wf_nav-color
     text-decoration none
     &:hover
         color wf_nav-color
-        rem-fallback( padding-bottom, 4px )
+        rem-fallback( padding-bottom, 2px )
         border-bottom 1px solid wf_nav-color
-
-        +media-query( screen, max-width 820px )
-            rem-fallback( padding-bottom, 2px )
 
 .banners
     position relative
     rem-fallback( width, 160px )
 
-    +media-query( screen, max-width 820px )
+    +media-query( screen, max-width 960px )
         margin 0 auto
 .banners__link
     position absolute
     top -14px
     left 0
 
-    +media-query( screen, max-width 820px )
+    +media-query( screen, max-width 960px )
         display none
 
 .button__login
     position absolute
-    rem-fallback( top, 0 )
-    rem-fallback( right, 16px )
+    rem-fallback( top, 3.25px )
+    rem-fallback( right, 4px )
+    rem-fallback( font-size, 16px )
     color wf_nav-color
-    opacity 0.6
-    transtion( all, 0.25s )
+    transition( all, 0.25s )
     cursor pointer
 
-    +media-query( screen, max-width 820px )
+    +media-query( screen, max-width 960px )
         position static
+        display inline-block
+        rem-fallback( font-size, 22px )
+        rem-fallback( margin, 24px 0 8px )
     &:hover
-        opacity 1
+        opacity 0.6
